--- a/Lessons/1. HTML Basics 🏗️/Movie Review/style.css
+++ b/Lessons/1. HTML Basics 🏗️/Movie Review/style.css
@@ -33,3 +33,25 @@ body {
     padding: 20px;
     border-radius: 8px;
 }
+
+ul, ol, dl{
+    color: white;
+    margin: 0;
+}
+
+ul {
+    list-style-type: square;
+}
+
+dl ul {
+    padding: 0;
+    list-style-type: none;
+}
+
+.link {
+    padding: 20px 0;
+}
+
+a {
+    color: aqua;
+}
